environments/stage/apps/app-python-devfile/services/python-devfile/base/config/100-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app.kubernetes.io/name: python-devfile
    app.kubernetes.io/part-of: app-python-devfile
  name: python-devfile
  namespace: stage
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: python-devfile
      app.kubernetes.io/part-of: app-python-devfile
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app.kubernetes.io/name: python-devfile
        app.kubernetes.io/part-of: app-python-devfile
    spec:
      containers:
      - image: quay.io/starnold/python
        imagePullPolicy: Always
        name: python-devfile
        ports:
        - containerPort: 5000
        resources: {}
      serviceAccountName: default
status: {}
