environments/stage/apps/app-python-devfile/services/python-devfile/base/config/200-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app.kubernetes.io/name: python-devfile
    app.kubernetes.io/part-of: app-python-devfile
  name: python-devfile
  namespace: stage
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app.kubernetes.io/name: python-devfile
    app.kubernetes.io/part-of: app-python-devfile
status:
  loadBalancer: {}
