environments/stage/apps/app-python-devfile/services/python-devfile/base/config/300-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  creationTimestamp: null
  name: stage-python-devfile
  namespace: stage
spec:
  port:
    targetPort: http
  to:
    kind: Service
    name: python-devfile
    weight: 100
  wildcardPolicy: None
